cuda_macros/src/cublaslt_internal.rs

extern "system" {
    fn cublasLtLegacyGemmHSH(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtLegacyGemmSSS(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtLegacyGemmTSS(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtLegacyGemmTST(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtLegacyGemmZZZ(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtClearNvjetCache(param_1: ::core::ffi::c_long) -> ();
}
extern "system" {
    fn cublasLtAlgoCharacteristicGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_int,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: *mut ::core::ffi::c_char,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtMatmulAlgoConfigGetAttributeRange() -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtHHHMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtHHHMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHHHMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHHHMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHHHMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHHHMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSHMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtHSHMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSHMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSHMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtHSHMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
